CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(CaveStory C CXX)

# Variables
SET(DEBUG_FLAGS "-ggdb -Wall -Wextra -Winline -pedantic")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -D_REENTRANT ${DEBUG_FLAGS}")
SET(BOOST_ROOT  "${CMAKE_SOURCE_DIR}/libs")
SET(GTEST_ROOT  "${BOOST_ROOT}")
SET(ENV{SDLDIR} "${BOOST_ROOT}")
SET(CAVE_LIB    "cavelib")

FIND_PACKAGE(Boost 1.56.0 REQUIRED)
FIND_PACKAGE(SDL 1.2 REQUIRED)
FIND_PACKAGE(GTest 1.7 REQUIRED)

INCLUDE_DIRECTORIES(
    ${Boost_INCLUDE_DIR}
    ${GTEST_INCLUDE_DIRS}
    ${SDL_INCLUDE_DIR}
    "${CMAKE_SOURCE_DIR}/src"
)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)

ADD_LIBRARY(
    ${CAVE_LIB}
    STATIC
    ${CAVE_SOURCES}
    ${CAVE_HEADERS}
)

ADD_EXECUTABLE(CaveStory ${CAVE_MAIN})
ADD_EXECUTABLE(CaveStoryTest ${CAVE_TEST_SOURCES})

TARGET_LINK_LIBRARIES(${CAVE_LIB}
    ${Boost_LIBRARIES}
    ${SDL_LIBRARY}
)
TARGET_LINK_LIBRARIES(CaveStory
    ${CAVE_LIB}
)
TARGET_LINK_LIBRARIES(CaveStoryTest
    ${CAVE_LIB}
    ${GTEST_BOTH_LIBRARIES}
)

# Debug
#GET_CMAKE_PROPERTY(_variablenames variables)
#FOREACH (_variablename ${_variablenames})
    #MESSAGE(STATUS "${_variableName}=${${_variableName}}")
#ENDFOREACH(_variablename)
