CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(BoostEx C CXX)

# Variables
SET(DEBUG_FLAGS "-ggdb -Wall -Wextra -Winline -pedantic")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -D_REENTRANT ${DEBUG_FLAGS}")
SET(BOOST_ROOT  "${CMAKE_SOURCE_DIR}/libs")
SET(GTEST_ROOT  "${BOOST_ROOT}")
SET(B_LIB    "blib")

FIND_PACKAGE(Boost 1.56.0 REQUIRED)
FIND_PACKAGE(GTest 1.7 REQUIRED)

INCLUDE_DIRECTORIES(
    ${Boost_INCLUDE_DIR}
    ${GTEST_INCLUDE_DIRS}
    "${CMAKE_SOURCE_DIR}/src"
)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)

ADD_LIBRARY(
    ${B_LIB}
    STATIC
    ${B_SOURCES}
    ${B_HEADERS}
)

ADD_EXECUTABLE(BoostEx ${B_MAIN})
ADD_EXECUTABLE(BoostExTest ${TEST_SOURCES})

TARGET_LINK_LIBRARIES(${B_LIB}
    ${Boost_LIBRARIES}
)
TARGET_LINK_LIBRARIES(BoostEx
    ${B_LIB}
)
TARGET_LINK_LIBRARIES(BoostExTest
    ${B_LIB}
    ${GTEST_BOTH_LIBRARIES}
)

# Debug
#GET_CMAKE_PROPERTY(_variablenames variables)
#FOREACH (_variablename ${_variablenames})
    #MESSAGE(STATUS "${_variableName}=${${_variableName}}")
#ENDFOREACH(_variablename)
